[project]
name = "quandary"
version = "4.4-dev"
description = "Optimal control for open quantum systems"
authors = [
    {name = "Stefanie Guenther",email = "guenther5@llnl.gov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy (>=1.26,<3.0.0)",
    "matplotlib (>=3.9.0,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pytest-benchmark (>=5.1.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
